# PeopleParty

./: .gitignore  docker-compose-dev.yml  docker-compose-staging.yml  docker-compose-test.yml  docker-compose.yml  package.json  readme.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template-bug.md  issue-template-feature.md
.github/workflows/: deploy-skylab.yml  publish-docker.yml  tests.yml  (+2 more)
.husky/: pre-commit
backend/: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  conanfile.txt  dockerfile  readme.md
backend/src/: SocketData.h  client.cpp  client.h  client_repository.cpp  client_repository.h  flatbuffer_message_builder.cpp  flatbuffer_message_builder.h  game.cpp  game.h  game_state.cpp  game_state.h  globals.h  main.cpp  party.cpp  party.h  party_repository.cpp  party_repository.h  role.h  room.cpp  room.h  socketdata.h  thread_timer.h  timer.h  typedefs.h  utils.h  websocket.cpp  websocket.h
backend/src/flatbuffer/: messageClass_generated.h  message_generated.h
backend/src/leaderboard/: leaderboard.cpp  leaderboard.h
backend/src/minigames/: minigame.cpp  minigame.h
backend/src/minigames/business_bailout/: business_bailout_minigame.cpp  business_bailout_minigame.h
backend/src/minigames/crazy_counting/: counting.cpp  counting.h  counting_register.cpp  counting_register.h  crazy_counting_mini_game.cpp  crazy_counting_mini_game.h  crazycounting_counting_register.cpp  crazycounting_counting_register.h  crazycounting_entity.cpp  crazycounting_entity.h  crazycounting_mini_game.cpp  crazycounting_mini_game.h  crazycounting_player.cpp  crazycounting_player.h  entity.cpp  entity.h  game.cpp  game.h
backend/src/minigames/crazy_counting/steering_behaviour/: entity_behaviour.cpp  entity_behaviour.h  matrix2d.h  vector2d.cpp  vector2d.h  wall2d.h  wall_avoidance.cpp  wall_avoidance.h  wander.cpp  wander.h
backend/src/minigames/highway_hustle/: highway_hustle_map.cpp  highway_hustle_map.h  highway_hustle_mini_game.cpp  highway_hustle_mini_game.h  moving_entity.h  obstacle_entity.h
backend/src/minigames/launch_party/: launch_party_mini_game.cpp  launch_party_mini_game.h
backend/src/minigames/marble_mania/: marble_mania_map.cpp  marble_mania_map.h  marble_mania_map_generator.cpp  marble_mania_map_generator.h  marble_mania_marble.cpp  marble_mania_marble.h  marble_mania_mini_game.cpp  marble_mania_mini_game.h  marble_mania_obstacle.cpp  marble_mania_obstacle.h
backend/src/minigames/memory_mixer/: memorymixer_card.h  memorymixer_mini_game.cpp  memorymixer_mini_game.h  memorymixer_player.cpp  memorymixer_player.h
backend/src/minigames/right_on_time/: right_on_time_mini_game.cpp  right_on_time_mini_game.h
backend/src/minigames/rps_bracket/: rps_bracket_minigame.cpp  rps_bracket_minigame.h
backend/src/partyprep/: party_settings.cpp  party_settings.h  partyprep.cpp  partyprep.h
backend/src/util/: defines.h  globals.h  socketdata.h  typedefs.h
backend/src/util/flatbuffer/: flatbuffer_message_builder.h
backend/src/util/math/: base_entity.h  vector2d.h
backend/src/util/physics/: collision.cpp  collision.h  collision_detector.cpp  collision_detector.h  collision_shape.cpp  collision_shape.h  marble.cpp  marble.h  physics.h  physics_constants.h  physics_object.cpp  physics_object.h  physics_world.cpp  physics_world.h  rigid_body.cpp  rigid_body.h  spatial_grid.cpp  spatial_grid.h
backend/tests/: main-test.cpp  main.cpp  party-test.cpp
frontend/: .eslintrc.cjs  README.md  bun.lockb  cypress.config.ts  cypress.dockerfile  dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.cypress.json  tsconfig.json  tsconfig.node.json  vite.config.ts
go_backend/: go.mod
gotest/: go.mod  main.go
minigames/: .clang-format  CMakeLists.txt
minigames/src/: debug.h  defines.h  game.h  game_state.h  game_update.h  main.cpp  minigame.h  notes.txt
minigames/src/business_bailout/: business_bailout_game_state.cpp  business_bailout_game_state.h  business_bailout_minigame.cpp  business_bailout_minigame.h  busniness_bailout_game_state.h
minigames/src/business_bailout/flat/: BusinessBailoutHostPayload_generated.h
nginx/: default.conf
proto/: game_com.proto
schemes/: (old)flatbuffer.fbs  builder.sh  message.fbs  messageClass.fbs
(+229 files in other folders)
